src/objects/AMS_Status_Reason__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines all possible combination of status and reason code/description available in change code. Used to set the proper reason code on change code</description>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AMS Status Reason</label>
</CustomObject>